--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Events login</title>
+    <title>Events system</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
-        <nav>
+        <nav id="nav-login">
             <a href="/login" data-link>Login</a>
             <a href="/register" data-link>Registro</a>
         </nav>
         <main id="content"></main>
-    </div>
+    <main id="content"></main>
+
 </body>
-<script src="./script.js"></script>
+<script type="module" src="./script.js"></script>
 </html>
